--- a/akash.html
+++ b/akash.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akash Ramesh</title>
     <link rel="stylesheet" href="akash.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="intro">
-        <h1>Akash Ramesh</h1>
+        <h2>Akash Ramesh</h2>
         
     </div>
     <div class="intro2">
-        <h2>Roll no = AM.SC.P2AML25002</h2>
+        <h3>Roll no = AM.SC.P2AML25002</h3>
     </div>
 
     <div class="image">
-        <img class="image1" src="Akash_Ramesh_Photo (2).jpg" alt="akash">
+        <img class="image1" src="Akash_photo.jpg" alt="akash">
     </div>
 
     <div class="intro3">
